// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Board view 1`] = `
{
  "lines": 2139,
  "sha256": "4fe7d1fb9d8ad09e229f7f8ad9883e94ce3e0ee7bf6d039ec1b8b391d6c58780",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Gantt view 1`] = `
{
  "lines": 1985,
  "sha256": "605083a637dd3f3c747c01ffec31e2767426adafad27f5618a4c1dfa46cbee5c",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Lookahead view 1`] = `
{
  "lines": 2230,
  "sha256": "9b95397f6b6b49c4825d9b4c1c2cc7d1979dce62c90c5903acbd5e45f1b16775",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Today view 1`] = `
{
  "lines": 2190,
  "sha256": "ce2b74b662132c4713d3b80c07aa093f12bf2142bc7e37a0f526557e38c4972f",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/discover/schedule 1`] = `
{
  "lines": 507,
  "sha256": "6e13e3b96078a7b522f9d13f06fbba234e62a7d6f3a68a3336fad0a9525d3607",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/schedule (MobileScheduleScreen) 1`] = `
{
  "lines": 1813,
  "sha256": "d4c6b1655ea9ad45ab50bfb6b4b6b7642cf55e938ec0c68606db62025837661a",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /copilot-hub 1`] = `
{
  "lines": 545,
  "sha256": "8e80f731ae563c5cd01e6044f465edb7dc39f3571c161507c3cc44d35c91421b",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-review with a draft 1`] = `
{
  "lines": 461,
  "sha256": "21e1934d6a8d3aad8de58ef694490e30a318f339b74b1d6c80d09601b433d296",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-wizard 1`] = `
{
  "lines": 1870,
  "sha256": "891c1c40ce01e85fe35f351d3695d3737dc58ed1b1d2c1d3c353927f9e677f5f",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) AddTaskModal, open 1`] = `
{
  "lines": 111,
  "sha256": "5449dc16a31f193ec7503dcaa36f7d352e4243d61e7d5b1464e70ba86a293cae",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) BaselineManagerModal, open 1`] = `
{
  "lines": 43,
  "sha256": "b49a5c188f6af94312a0db88db0ef13a9f6bbf3ba4f575038083a6dca950cb6f",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) COScheduleReflowPreviewModal, open 1`] = `
{
  "lines": 67,
  "sha256": "d30b32ad7fc8f08d8606673a2ebf5513616fb2be888384610bb4dc1a25d26dec",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ClosuresModal, open 1`] = `
{
  "lines": 186,
  "sha256": "a6f8aab84db2e5b474de628c435d3f454011d5cde8351b7bb4abe8db9cb181c5",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) CriticalPathPanel, open 1`] = `
{
  "lines": 55,
  "sha256": "8bb05eaca5bf29115792f06f2d787628b1ee0e6b922f5c93201f74969c258c21",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ExportSheet, open 1`] = `
{
  "lines": 91,
  "sha256": "b09165bd1328a415d8088fe16497012e35f23a83d32bc09fe5b93378c7e1b648",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) LevelingPreviewModal, open 1`] = `
{
  "lines": 47,
  "sha256": "a51c76cbbc0733391bd751a20603ca863be7e69f2caaf1f4d2de40d51f907b09",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) PredecessorPicker, open 1`] = `
{
  "lines": 72,
  "sha256": "e10508558b0c77c49d8b7f9b76c14e1d0d97f91793f37b3ec19d8931731c3eef",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) QuickBuildModal, open 1`] = `
{
  "lines": 186,
  "sha256": "612937c8a26b4d441c24b2cf8097ebb4293131468f4852a43c5600a86589fc70",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleAuditModal, open 1`] = `
{
  "lines": 20,
  "sha256": "33d957f7f30819e060e8a592c369dc16aafa74b6ab77556bac9d0236fd8683bb",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleHealthDetail, open 1`] = `
{
  "lines": 425,
  "sha256": "f6e469557d33fbfa80df4b3cf84c843345d195b4b887716c2ec4b0ced83c90ba",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleSettingsMenu, open 1`] = `
{
  "lines": 291,
  "sha256": "19053f2efa8fae4f51b4729001c05b852a55922d0364d01834ba7efe20366a70",
}
`;
